Primality musing added

--- a/musings/matching.html
+++ b/musings/matching.html
@@ -53,7 +53,7 @@
                 motivated by "Matching Day", a semiannual tradition in Greek life
                 in which new inductees are paired with existing members of the organization. Not being a member of a
                 fraternity myself, I asked a friend of mine for more details. Here's
-                what I was told:
+                what I gathered:
             </p>
 
             <ol class="list-decimal leading-relaxed list-inside pl-8 mb-4">
